// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build distribution should have a predictable ephemeral navigation based on route configuration: GUI routes expected covered, missing routes 1`] = `
[
  {
    "coverage": "FALSE",
    "path": "/ansible-aap-managed",
    "productGroup": [
      "ansible-aap-managed",
    ],
    "productId": [
      "ansible-aap-managed",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/ansible",
    "productGroup": [
      "ansible-aap-managed",
    ],
    "productId": [
      "ansible-aap-managed",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/OpenShift Container Platform",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift-container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/platform",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/shift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/openshift-dedicated",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/dedicated",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/OpenShift-metrics",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/metrics",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/advanced",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/cluster",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/security",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/kubernetes",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/acs",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/application-services",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/data",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/science",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": "/ods",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/insights",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/enterprise",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/linux",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/el",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/x86",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/ibm",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/power",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/els",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/sat",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/server",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "FALSE",
    "path": "/capsule",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
]
`;

exports[`Build distribution should have a predictable ephemeral navigation based on route configuration: YAML routes expected covered, missing routes 1`] = `
[
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
  {
    "coverage": "FALSE",
    "path": undefined,
    "productGroup": undefined,
    "productId": undefined,
    "productVariants": undefined,
  },
  {
    "coverage": "FALSE",
    "path": undefined,
    "productGroup": undefined,
    "productId": undefined,
    "productVariants": undefined,
  },
  {
    "coverage": "TRUE",
    "path": "/rhel",
    "productGroup": [
      "rhel",
    ],
    "productId": [
      "RHEL for x86",
      "rhel-for-x86-els-payg",
      "Satellite Server",
    ],
    "productVariants": [
      "RHEL for ARM",
      "RHEL for IBM Power",
      "RHEL for IBM z",
      "RHEL for x86",
      "rhel-for-x86-eus",
      "rhel-for-x86-ha",
      "rhel-for-x86-rs",
      "rhel-for-x86-els-unconverted",
      "rhel-for-sap-x86",
      "rhel-for-x86-els-payg",
      "rhel-for-x86-els-payg-addon",
      "Satellite Capsule",
      "Satellite Server",
    ],
  },
  {
    "coverage": "TRUE",
    "path": "/openshift-container",
    "productGroup": [
      "openshift",
    ],
    "productId": [
      "OpenShift Container Platform",
      "OpenShift-dedicated-metrics",
      "OpenShift-metrics",
      "rhacs",
      "rhods",
      "rosa",
    ],
    "productVariants": [],
  },
]
`;

exports[`Build distribution should match a specific file output 1`] = `
[
  "",
  "./dist/css/1631*css",
  "./dist/css/1702*css",
  "./dist/fed-mods.json",
  "./dist/fonts/graph2x.png",
  "./dist/fonts/graph4x.png",
  "./dist/js/1003*js",
  "./dist/js/1117*js",
  "./dist/js/1132*js",
  "./dist/js/1187*js",
  "./dist/js/1295*js",
  "./dist/js/1309*js",
  "./dist/js/1398*js",
  "./dist/js/1415*js",
  "./dist/js/1448*js",
  "./dist/js/1507*js",
  "./dist/js/1509*js",
  "./dist/js/1586*js",
  "./dist/js/1631*js",
  "./dist/js/167*js",
  "./dist/js/1702*js",
  "./dist/js/2007*js",
  "./dist/js/2403*js",
  "./dist/js/2471*js",
  "./dist/js/2531*js",
  "./dist/js/2871*js",
  "./dist/js/2913*js",
  "./dist/js/305*js",
  "./dist/js/3055*js",
  "./dist/js/3090*js",
  "./dist/js/3091*js",
  "./dist/js/310*js",
  "./dist/js/3114*js",
  "./dist/js/3219*js",
  "./dist/js/3294*js",
  "./dist/js/3568*js",
  "./dist/js/3676*js",
  "./dist/js/3690*js",
  "./dist/js/3693*js",
  "./dist/js/372*js",
  "./dist/js/3796*js",
  "./dist/js/3888*js",
  "./dist/js/389*js",
  "./dist/js/3941*js",
  "./dist/js/4133*js",
  "./dist/js/4144*js",
  "./dist/js/4388*js",
  "./dist/js/4421*js",
  "./dist/js/4428*js",
  "./dist/js/4434*js",
  "./dist/js/4447*js",
  "./dist/js/4447*txt",
  "./dist/js/4451*js",
  "./dist/js/4869*js",
  "./dist/js/4912*js",
  "./dist/js/5093*js",
  "./dist/js/5252*js",
  "./dist/js/5294*js",
  "./dist/js/5436*js",
  "./dist/js/5523*js",
  "./dist/js/5600*js",
  "./dist/js/5606*js",
  "./dist/js/5995*js",
  "./dist/js/6074*js",
  "./dist/js/6137*js",
  "./dist/js/6161*js",
  "./dist/js/6322*js",
  "./dist/js/6335*js",
  "./dist/js/6468*js",
  "./dist/js/6497*js",
  "./dist/js/6514*js",
  "./dist/js/6662*js",
  "./dist/js/6662*txt",
  "./dist/js/6752*js",
  "./dist/js/6755*js",
  "./dist/js/6802*js",
  "./dist/js/7019*js",
  "./dist/js/709*js",
  "./dist/js/72*js",
  "./dist/js/744*js",
  "./dist/js/7454*js",
  "./dist/js/7474*js",
  "./dist/js/7691*js",
  "./dist/js/7964*js",
  "./dist/js/8005*js",
  "./dist/js/8376*js",
  "./dist/js/8479*js",
  "./dist/js/8518*js",
  "./dist/js/8542*js",
  "./dist/js/8716*js",
  "./dist/js/8775*js",
  "./dist/js/8923*js",
  "./dist/js/8965*js",
  "./dist/js/8965*txt",
  "./dist/js/9026*js",
  "./dist/js/9067*js",
  "./dist/js/9205*js",
  "./dist/js/9400*js",
  "./dist/js/9732*js",
  "./dist/js/App*js",
  "./dist/js/exposed-./RootApp*js",
  "./dist/locales/en-US.json",
  "./dist/locales/en.json",
  "./dist/locales/locales.json",
  "./dist/sourcemaps/1003*map",
  "./dist/sourcemaps/1132*map",
  "./dist/sourcemaps/1187*map",
  "./dist/sourcemaps/1295*map",
  "./dist/sourcemaps/1309*map",
  "./dist/sourcemaps/1398*map",
  "./dist/sourcemaps/1415*map",
  "./dist/sourcemaps/1448*map",
  "./dist/sourcemaps/1507*map",
  "./dist/sourcemaps/1509*map",
  "./dist/sourcemaps/1586*map",
  "./dist/sourcemaps/1631*map",
  "./dist/sourcemaps/167*map",
  "./dist/sourcemaps/1702*map",
  "./dist/sourcemaps/2007*map",
  "./dist/sourcemaps/2471*map",
  "./dist/sourcemaps/2531*map",
  "./dist/sourcemaps/2871*map",
  "./dist/sourcemaps/2913*map",
  "./dist/sourcemaps/305*map",
  "./dist/sourcemaps/3055*map",
  "./dist/sourcemaps/3090*map",
  "./dist/sourcemaps/310*map",
  "./dist/sourcemaps/3219*map",
  "./dist/sourcemaps/3294*map",
  "./dist/sourcemaps/3568*map",
  "./dist/sourcemaps/3690*map",
  "./dist/sourcemaps/3693*map",
  "./dist/sourcemaps/372*map",
  "./dist/sourcemaps/3796*map",
  "./dist/sourcemaps/3888*map",
  "./dist/sourcemaps/3941*map",
  "./dist/sourcemaps/4133*map",
  "./dist/sourcemaps/4144*map",
  "./dist/sourcemaps/4421*map",
  "./dist/sourcemaps/4428*map",
  "./dist/sourcemaps/4434*map",
  "./dist/sourcemaps/4447*map",
  "./dist/sourcemaps/4451*map",
  "./dist/sourcemaps/4869*map",
  "./dist/sourcemaps/4912*map",
  "./dist/sourcemaps/5093*map",
  "./dist/sourcemaps/5252*map",
  "./dist/sourcemaps/5294*map",
  "./dist/sourcemaps/5436*map",
  "./dist/sourcemaps/5523*map",
  "./dist/sourcemaps/5600*map",
  "./dist/sourcemaps/5606*map",
  "./dist/sourcemaps/6074*map",
  "./dist/sourcemaps/6137*map",
  "./dist/sourcemaps/6161*map",
  "./dist/sourcemaps/6322*map",
  "./dist/sourcemaps/6335*map",
  "./dist/sourcemaps/6468*map",
  "./dist/sourcemaps/6662*map",
  "./dist/sourcemaps/6755*map",
  "./dist/sourcemaps/6802*map",
  "./dist/sourcemaps/7019*map",
  "./dist/sourcemaps/709*map",
  "./dist/sourcemaps/72*map",
  "./dist/sourcemaps/744*map",
  "./dist/sourcemaps/7691*map",
  "./dist/sourcemaps/7964*map",
  "./dist/sourcemaps/8376*map",
  "./dist/sourcemaps/8479*map",
  "./dist/sourcemaps/8518*map",
  "./dist/sourcemaps/8542*map",
  "./dist/sourcemaps/8716*map",
  "./dist/sourcemaps/8775*map",
  "./dist/sourcemaps/8923*map",
  "./dist/sourcemaps/8965*map",
  "./dist/sourcemaps/9026*map",
  "./dist/sourcemaps/9205*map",
  "./dist/sourcemaps/9400*map",
  "./dist/sourcemaps/9732*map",
  "./dist/sourcemaps/App*map",
  "./dist/sourcemaps/exposed-./RootApp*map",
  "./dist/subscriptions*js",
]
`;
